GS-10319 B (Right Column) Version: Deselecting Grade Level option and clicking Go is causing entire right column to disappear on IE6 - changed construction of error message to correct layout crack in IE6.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -4872,6 +4872,20 @@ margin:10px 0 14px 20px;
 }
 
 /* error messaging */
+#schoolChoicePackPromo .gradeSelect{
+    clear:both;
+    position:relative;
+    display:none;
+}
+
+#schoolChoicePackPromo .gradeSelect-error{
+    position:absolute;
+    left:0; top:0;
+    display:block;
+    font-weight:normal;
+    width:200px;
+}
+
 #schoolChoicePackPromo .cemail{
     clear:both;
     position:relative;
